# debaterhub-sdk

./: .env.example  CHANGELOG.md  README.md  llms.txt  pyproject.toml
.github/workflows/: tests-fast.yml  tests-slow.yml
docs/: architecture.md  events.md  formats.md  how-to.md  modes.md
examples/: ld_simple.py  pf_simple.py
scripts/: share-env.sh
src/debaterhub/: __init__.py  _data_channel.py  _livekit.py  client.py  config.py  constants.py  counters.py  events.py  exceptions.py  flow_schema.py  formats.py  logging_setup.py  models.py  observability.py  protocol.py  search.py  session.py  state.py  topics.py  warmup.py
tests/: conftest.py  test_client.py  test_config.py  test_formats.py  test_langfuse.py  test_ld_flow.py  test_pf_flow.py  test_protocol.py  test_state.py
tests/e2e/: conftest.py  test_full_debate.py  test_ipda_handoff_smoke.py  test_live_session.py  test_protocol_e2e.py  test_session_actions.py  test_state_machine.py  test_typed_models.py
