[project]
name = "debaterhub-sdk"
version = "0.1.0"
description = "Python SDK for human-vs-AI IPDA debates via LiveKit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "David Gonier" }]
dependencies = [
    "livekit>=0.17.0",
    "livekit-api>=0.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0,<3",
]

[project.urls]
Homepage = "https://github.com/dgonier/debaterhub-sdk"
Repository = "https://github.com/dgonier/debaterhub-sdk"
Documentation = "https://github.com/dgonier/debaterhub-sdk/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debaterhub"]
